--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
   "homepage": "https://github.com/LendiDev/online-shop#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-mongodb-session": "^3.1.1",
+    "csurf": "^1.11.0",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mongodb": "^4.13.0"
   },
   "devDependencies": {
